<resources>
    <string name="app_name">Teammate</string>
    <string name="teammates">Teammate</string>
    <string name="splash_subtitle">Sign up to connect, coordinate, and collaborate with your team</string>
    <string name="empty_string"> </string>
    <string name="no_special_characters">No special characters</string>
    <string name="no_permission">You don\'t have permission to edit this item</string>
    <string name="login_email">Sign up with email</string>
    <string name="login_or">or</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_have_account">Already have an account?</string>
    <string name="login_sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="reset_token">Reset Token</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_back_to_main">Back to main menu</string>
    <string name="sign_in_forgot_password">Forgot Password?</string>
    <string name="sign_in_error_default">Error signing in, please try again later</string>
    <string name="sign_in_error_invalid_password">Please review your credentials</string>
    <string name="sign_in_error_invalid_email">Sorry, this account does not exist</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="screen_name">Handle</string>
    <string name="nickname">Nickname</string>
    <string name="member_information">Member Information</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_terms_phrase">I agree to the %1$s and the %2$s</string>
    <string name="sign_up_terms">Terms of Service</string>
    <string name="sign_up_privacy_policy">Privacy Policy</string>
    <string name="sign_up_terms_accept">Please accept the Terms of Service and Privacy Policy to continue</string>
    <string name="sign_up_error_default">Error signing up, please try again later</string>
    <string name="sign_up_error_weak_password">Your password is too weak, please try again</string>
    <string name="sign_up_error_invalid_credentials">The credentials provided don\'t match our records, please try again</string>
    <string name="sign_up_error_duplicate_credentials">A user already exists with the credentials provided, please try again</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="chats">Chats</string>
    <string name="media">Gallery</string>
    <string name="my_teams">My Teams</string>
    <string name="expand_nav">Expand bottom nav</string>
    <string name="team">Team</string>
    <string name="teams">Teams</string>
    <string name="settings">Settings</string>
    <string name="block_user">Block User</string>
    <string name="user_blocked">Blocked %1$s</string>
    <string name="home_greeting">Good %1$s, %2$s</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="accept">Accept</string>
    <string name="show_on_boarding">Show tutorial</string>
    <string name="decline">Decline</string>
    <string name="clarify_invitation">Do you still want to join %1$s?</string>
    <string name="accept_invitation">Join %1$s?</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings_set_theme">Set Theme</string>
    <string name="settings_light_theme">Light Theme</string>
    <string name="settings_dark_theme">Dark Theme</string>
    <string name="settings_system_theme">Follow System Theme</string>
    <string name="settings_battery_saver_theme">Follow Battery Saver</string>
    <string name="join_team">Join Team</string>
    <string name="my_profile">My Profile</string>
    <string name="delete_user">Delete account</string>
    <string name="delete_user_prompt">Delete your account?</string>
    <string name="delete_user_prompt_body">This is permanent and cannot be undone.
        \n\nAll your roles will be deleted as well, however chats and media in teams will remain unless those teams are deleted too.
        \n\nGames and stats will remain after deletion as they involve other people and teams.
        \n\nIf you are the only admin on a team, you will need to make someone else the admin or delete the team too.</string>
    <string name="email_sent">Email sent!</string>
    <string name="error_default">Sorry, an error occurred</string>
    <string name="error_network">Unable to connect, please try again later.</string>
    <string name="error_socket">Unable to connect</string>
    <string name="user_search">Search by user @handles</string>
    <string name="team_search">Search by team name or team @handles</string>
    <string name="team_search_hint">Search</string>
    <string name="team_logo">Team Logo</string>
    <string name="create_team_prompt">Can\'t find your team?</string>
    <string name="team_name">Team Name</string>
    <string name="team_info">Team Info</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="team_role">Team Role</string>
    <string name="create_team">Create Team</string>
    <string name="edit_team">Edit Team</string>
    <string name="choose_role">Pick your Role</string>
    <string name="choose_sport">Pick your Sport</string>
    <string name="choose_role_error">Please select your Role</string>
    <string name="team_error_duplicate_join_request">You\'ve already asked to join this team</string>
    <string name="team_submitted_join_request">Join request submitted</string>
    <string name="team_invalid_empty_field">Field must not be empty</string>
    <string name="created_team">Created team "%1$s"</string>
    <string name="updated_team">Updated team</string>
    <string name="team_storage_used">Storage Used</string>
    <string name="team_sport">Sport</string>
    <string name="team_description">Description</string>
    <string name="team_min_age">Minimum Age</string>
    <string name="team_max_age">Maximum Age</string>
    <string name="any_sport">any sport</string>
    <string name="pick_team">Pick a Team</string>
    <string name="team_name_prefix">Team: %1$s</string>
    <string name="invite">invite</string>
    <string name="team_create">Create team</string>
    <string name="team_update">Update team</string>
    <string name="team_search_create">Find or create team</string>
    <string name="user_invited">Has been invited as a %1$s</string>
    <string name="user_requests_join">Has requested to join as a %1$s</string>
    <string name="create_team_first">Please create the team first</string>
    <string name="delete_team">Delete team</string>
    <string name="delete_team_prompt">Delete %1$s?</string>
    <string name="delete_team_prompt_body">This is permanent and cannot be undone.
        \n\nAll roles and events that do not have games will be deleted as well, along with chats and media.
        \n\nGames and stats will remain after deletion as they involve other people and teams. </string>
    <string name="deleted_team">Deleted %1$s</string>
    <string name="role_edit">Edit Role</string>
    <string name="role_update">Update role</string>
    <string name="invite_user">Invite User</string>
    <string name="approve">Approve</string>
    <string name="approve_request">Approve User</string>
    <string name="pending_request">Pending Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="confirm_request_drop">Dismiss the join request for %1$s?</string>
    <string name="confirm_request_leave">Dismiss the request to join %1$s?</string>
    <string name="user_invite_sent">Invite sent</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_info">User Info</string>
    <string name="user_about">About</string>
    <string name="user_edit">Edit User</string>
    <string name="user_update">Update user</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="okay">okay</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="add_user_to_team">Add %1$s to team?</string>
    <string name="retract_invitation">Retract invitation?</string>
    <string name="select_role">Please select a role</string>
    <string name="updated_user">Updated %1$s!</string>
    <string name="added_user">Added %1$s!</string>
    <string name="removed_user">Removed %1$s</string>
    <string name="drop_user">Drop User</string>
    <string name="dropped_user">Dropped %1$s</string>
    <string name="confirm_user_drop">Drop %1$s from the team?</string>
    <string name="confirm_user_leave">Leave this team?</string>
    <string name="events_title">%1$s Events</string>
    <string name="create_event">Create Event</string>
    <string name="edit_event">Event: %1$s</string>
    <string name="event_game">Game</string>
    <string name="event_game_view">View game</string>
    <string name="event_name">Event Name</string>
    <string name="event_add">Add event</string>
    <string name="event_create">Create event</string>
    <string name="event_update">Update event</string>
    <string name="event_spots">Spots Available</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_public">Public events</string>
    <string name="event_visibility">Visibility</string>
    <string name="event_visibility_selection">Choose your event\'s visibility</string>
    <string name="location">Location</string>
    <string name="map_pick">Pick On Map</string>
    <string name="notes">Notes</string>
    <string name="event_details">Details</string>
    <string name="rsvp_event">R.S.V.P</string>
    <string name="event_no_location">This event does not have a location</string>
    <string name="navigate_event">Navigate</string>
    <string name="delete_event">Delete event</string>
    <string name="delete_event_prompt">Delete event?</string>
    <string name="attend_event">Attending this event?</string>
    <string name="event_attending">Going</string>
    <string name="event_not_attending">Not Going</string>
    <string name="tourneys">Tourneys</string>
    <string name="tournaments_title">%1$s Tournaments</string>
    <string name="tournaments">Tournaments</string>
    <string name="editing_competitors">Editing</string>
    <string name="add_tournament_competitors_prompt">Add Competitors?</string>
    <string name="delete_tournament_prompt">Delete tournament?</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="create_tournament_first">Please create the tournament first</string>
    <string name="edit_tournament">Tournament: %1$s</string>
    <string name="tournament_add">Add tournament</string>
    <string name="tournament_create">Create tournament</string>
    <string name="tournament_update">Update tournament</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="tournament_fixtures">Tournament Fixtures</string>
    <string name="tournament_stats">Tournament Stats</string>
    <string name="games">Games</string>
    <string name="game_wins">Wins</string>
    <string name="game_draws">Draws</string>
    <string name="game_losses">Losses</string>
    <string name="game_end">End game</string>
    <string name="game_delete">Delete game</string>
    <string name="game_event">Game event</string>
    <string name="game_head_to_head_params">Head to head search</string>
    <string name="game_head_to_head">Head to Head</string>
    <string name="stat_aggregate">Aggregated stats</string>
    <string name="event_public_start_search">Search</string>
    <string name="attending_events">RSVP List</string>
</resources>