<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_rsvp_list"
        android:enabled="true"
        android:icon="@drawable/ic_event_rsvp_white_24dp"
        android:title="@string/attending_events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_public_events"
        android:enabled="true"
        android:icon="@drawable/ic_globe_white_24dp"
        android:title="@string/event_public"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>