<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_navigate"
        android:enabled="true"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/navigate_event"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rsvp"
        android:enabled="true"
        android:icon="@drawable/ic_event_available_white_24dp"
        android:title="@string/rsvp_event"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:enabled="true"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_event"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>