<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/action_bar_height">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/card_view_wrapper"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/single_margin"
            app:layout_constraintBottom_toBottomOf="@+id/password_wrapper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <TextView
            android:id="@+id/member_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:padding="@dimen/single_margin"
            android:text="@string/member_information"
            android:textColor="@color/white"
            android:textSize="@dimen/regular_text"
            app:layout_constraintLeft_toLeftOf="@+id/card_view_wrapper"
            app:layout_constraintRight_toRightOf="@+id/card_view_wrapper"
            app:layout_constraintTop_toTopOf="@+id/card_view_wrapper" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/single_margin"
            android:layout_marginRight="@dimen/single_margin"
            android:layout_marginTop="@dimen/half_margin"
            app:layout_constraintLeft_toLeftOf="@+id/card_view_wrapper"
            app:layout_constraintRight_toRightOf="@+id/card_view_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/member_info">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/single_margin"
            android:layout_marginRight="@dimen/single_margin"
            android:layout_marginTop="@dimen/half_margin"
            app:layout_constraintLeft_toLeftOf="@+id/card_view_wrapper"
            app:layout_constraintRight_toRightOf="@+id/card_view_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/first_name_wrapper">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/single_margin"
            android:layout_marginRight="@dimen/single_margin"
            android:layout_marginTop="@dimen/half_margin"
            app:layout_constraintLeft_toLeftOf="@+id/card_view_wrapper"
            app:layout_constraintRight_toRightOf="@+id/card_view_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/last_name_wrapper">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/single_margin"
            android:layout_marginRight="@dimen/single_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:paddingBottom="@dimen/single_and_half_margin"
            app:layout_constraintLeft_toLeftOf="@+id/card_view_wrapper"
            app:layout_constraintRight_toRightOf="@+id/card_view_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/email_wrapper">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

