<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="@dimen/single_margin"
        android:layout_marginRight="@dimen/single_margin"
        android:layout_marginTop="@dimen/single_and_half_margin"
        android:elevation="@dimen/double_margin"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/single_margin"
            android:paddingTop="@dimen/single_margin">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/single_margin"
                android:paddingLeft="@dimen/single_margin"
                android:paddingRight="@dimen/single_margin"
                android:text="@string/game_head_to_head_params"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/single_margin"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_title" />

            <TextView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/single_margin"
                android:background="@drawable/bg_chat_box"
                android:backgroundTint="@color/colorAccent"
                android:paddingBottom="@dimen/half_margin"
                android:paddingLeft="@dimen/single_margin"
                android:paddingRight="@dimen/single_margin"
                android:paddingTop="@dimen/half_margin"
                android:text="@string/event_public_start_search"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_options" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/wins"
        app:layout_constraintLeft_toLeftOf="@+id/card_view_wrapper"
        app:layout_constraintRight_toRightOf="@+id/card_view_wrapper"
        app:layout_constraintTop_toTopOf="@+id/wins" />

    <TextView
        android:id="@+id/wins"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginTop="@dimen/sextuple_margin"
        android:elevation="@dimen/single_margin"
        android:gravity="center"
        android:text="@string/game_wins"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/draws"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/draws"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/action_bar_height"
        android:elevation="@dimen/single_margin"
        android:gravity="center"
        android:text="@string/game_draws"
        app:layout_constraintLeft_toRightOf="@+id/wins"
        app:layout_constraintRight_toLeftOf="@+id/losses"
        app:layout_constraintTop_toTopOf="@id/wins" />

    <TextView
        android:id="@+id/losses"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/action_bar_height"
        android:elevation="@dimen/single_margin"
        android:gravity="center"
        android:text="@string/game_losses"
        app:layout_constraintLeft_toRightOf="@+id/draws"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/wins" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/half_margin"
        android:paddingLeft="@dimen/half_margin"
        android:paddingRight="@dimen/half_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wins">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/team_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <include
        layout="@layout/viewholder_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>

